# data-pipelines

./: docker-compose.yml  etl_ingestion.py  kafka_pull.py  pyproject.toml  setup.py
data_pipelines/: etl_ingestion.py  kafka_pull.py
data_pipelines/libs/: aws.py
data_pipelines/schemas/: kafka_lenses_backblaze_smart.py
libs/: aws.py
