[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-pipelines"
version = "0.1.0"
description = "Data Pipelines"
authors = [
    {name="Tanvi", email="tvthanki@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyspark",
    "boto3",
    "kafka-python"
]